--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["multimedia", "parsing"]
 # Core I/O
 byteorder = "1.5"
 thiserror = "1.0"
+md5 = "0.7"
 
 # Optional features
 memmap2 = { version = "0.9", optional = true }
@@ -28,7 +29,7 @@ criterion = "0.5"
 tempfile = "3.8"
 
 [features]
-default = ["jpeg"]
+default = ["jpeg", "test-utils"]
 jpeg = []
 png = []
 bmff = []
@@ -36,6 +37,12 @@ memory-mapped = ["memmap2"]
 thumbnails = ["image"]
 hashing = ["sha2"]
 all-formats = ["jpeg", "png", "bmff"]
+
+# Testing features
+# embed-fixtures: Compile small test fixtures into the binary (faster CI, no file I/O)
+# test-utils: Make test utilities available (enabled by default, disable with --no-default-features for production)
+embed-fixtures = []
+test-utils = []
 
 [profile.release]
 opt-level = 3
