--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ sha2 = { version = "0.10", optional = true }
 [dev-dependencies]
 criterion = "0.5"
 tempfile = "3.8"
+sha2 = "0.10"  # For examples
 
 [features]
 default = ["jpeg", "test-utils"]
