Rename crate from jumbf-io to asset-io
The crate has evolved beyond just JUMBF support to become a comprehensive
media asset I/O library. The new name better reflects the actual scope:

Scope includes:
- JUMBF/C2PA metadata
- XMP metadata (including Extended)
- Thumbnail generation interface
- Hardware-accelerated hashing
- Memory-mapped I/O
- Format-agnostic Asset API
- Future: EXIF, IPTC, PNG, WebP, HEIF, MP4, etc.

The 'asset-io' name:
- Matches the primary Asset API
- Accurately describes functionality (media asset I/O)
- Generic enough for all formats and metadata types
- Better for discoverability (people search 'asset I/O')
- Future-proof for additional formats

Changes:
- Cargo.toml: name = 'asset-io', updated description
- All source files: jumbf_io → asset_io
- All documentation: updated crate name and imports
- All examples: updated imports
- All tests: updated imports

Repository URL updated to: https://github.com/contentauth/asset-io
(Note: GitHub repo redirect will work even after rename)

API remains 100% identical - only import names changed:
  use jumbf_io::Asset;  // old
  use asset_io::Asset;  // new

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "jumbf-io"
+name = "asset-io"
 version = "0.1.0"
 edition = "2021"
 authors = ["Greg Peacock <gpeacock@adobe.com>"]
 license = "MIT OR Apache-2.0"
-description = "High-performance streaming JUMBF and XMP I/O for media files"
-repository = "https://github.com/contentauth/jumbf-io"
-keywords = ["jumbf", "c2pa", "xmp", "jpeg", "streaming"]
+description = "High-performance streaming I/O for media asset metadata (JUMBF, XMP, C2PA, thumbnails)"
+repository = "https://github.com/contentauth/asset-io"
+keywords = ["asset", "c2pa", "xmp", "jumbf", "metadata"]
 categories = ["multimedia", "parsing"]
 
 [dependencies]
