feat: Add PNG support, EXIF thumbnail extraction, and refactor format handlers
Major Features:
- Add PNG format support with full read/write of XMP and JUMBF metadata
- Implement EXIF thumbnail extraction with custom minimal TIFF parser
- Refactor format-specific metadata extraction to handler pattern

PNG Support:
- Parse PNG chunks (IHDR, IDAT, IEND, iTXt, caBX)
- Write PNG with metadata updates (XMP in iTXt, JUMBF in caBX)
- CRC32 validation and generation
- 12 new integration tests for PNG operations

EXIF Thumbnail Extraction:
- Add minimal TIFF/EXIF parser (220 LOC, zero dependencies)
- Parse IFD chain (IFD0 -> IFD1) to extract thumbnail metadata
- Lazy-load thumbnails via offset/size (no data loaded until needed)
- Extract thumbnail location, format, and dimensions from JPEG EXIF
- Successfully tested on P1000708.jpg (16KB thumbnail at offset 896)

Architecture Improvements:
- Refactor XMP/JUMBF extraction from FileStructure to FormatHandler trait
- Move JPEG-specific Extended XMP assembly to JpegHandler
- Move JPEG-specific JPEG XT header handling to JpegHandler
- Document Extended XMP as JPEG-specific with clear TODO for future refactor
- Add Segment::Exif variant for embedded thumbnail metadata

Code Quality:
- Fix all clippy warnings (assign operations, parentheses, unused mut)
- Feature-gate TIFF module and EXIF support under 'thumbnails' feature
- Add required-features to examples in Cargo.toml
- Update EmbeddedThumbnail to store location instead of data (lazy loading)
- Clean separation of format-specific logic

Testing:
- 40 tests passing with --all-features
- 20 tests passing with default features
- New fixtures: GreenCat.png (2.4MB test file)
- Tests cover: parsing, round-trip, metadata add/remove, format detection

Documentation:
- Add REFACTORING_FORMAT_SPECIFIC_JUMBF.md explaining architecture
- Update README with PNG support in format table
- Document thumbnail extraction workflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,27 @@ all-formats = ["jpeg", "png", "bmff"]
 embed-fixtures = []
 test-utils = []
 
+# Example-specific features
+[[example]]
+name = "png_demo"
+required-features = ["png"]
+
+[[example]]
+name = "thumbnail_demo"
+required-features = ["thumbnails"]
+
+[[example]]
+name = "mmap_demo"
+required-features = ["memory-mapped"]
+
+[[example]]
+name = "hash_demo"
+required-features = ["hashing"]
+
+[[example]]
+name = "sha256_demo"
+required-features = ["hashing"]
+
 [profile.release]
 opt-level = 3
 lto = true
