--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,6 @@ md5 = "0.7"
 # Optional features
 memmap2 = { version = "0.9", optional = true }
 
-# Image processing (for thumbnail generation)
-image = { version = "0.25", optional = true, default-features = false, features = ["jpeg"] }
-
 # Hashing
 sha2 = { version = "0.10", optional = true }
 
@@ -33,11 +30,12 @@ sha2 = "0.10"  # For examples
 default = ["jpeg", "test-utils"]
 jpeg = []
 png = []
-bmff = []
+exif = []  # EXIF parsing and embedded thumbnail extraction
 memory-mapped = ["memmap2"]
-thumbnails = ["image"]
 hashing = ["sha2"]
-all-formats = ["jpeg", "png", "bmff"]
+all-formats = ["jpeg", "png"]
+
+# Note: At least one format feature (jpeg, png) must be enabled for the library to compile.
 
 # Testing features
 # embed-fixtures: Compile small test fixtures into the binary (faster CI, no file I/O)
@@ -52,7 +50,7 @@ required-features = ["png"]
 
 [[example]]
 name = "thumbnail_demo"
-required-features = ["thumbnails"]
+# Thumbnail infrastructure is always available, no feature needed
 
 [[example]]
 name = "mmap_demo"
