--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ md5 = "0.7"
 
 # Optional features
 memmap2 = { version = "0.9", optional = true }
+fs2 = { version = "0.4", optional = true }
 
 # Hashing
 sha2 = { version = "0.10", optional = true }
@@ -31,7 +32,7 @@ default = ["jpeg", "test-utils"]
 jpeg = []
 png = []
 exif = []  # EXIF parsing and embedded thumbnail extraction
-memory-mapped = ["memmap2"]
+memory-mapped = ["memmap2", "fs2"]
 hashing = ["sha2"]
 all-formats = ["jpeg", "png"]
 
