Add C2PA data hashing example and VirtualAsset foundation
- Created examples/c2pa.rs demonstrating C2PA data hashing workflow with asset-io
  - Uses intermediate parsing to get actual structure with correct offsets
  - Properly excludes C2PA manifest from hash calculation
  - Demonstrates Settings API and data_hashed_placeholder workflow

- Created examples/virtual_asset.rs to demonstrate VirtualAsset API
  - Shows metadata updates without immediate writing
  - Documents current limitation: returns source structure, not destination

- Added VirtualAsset struct and with_updates() method to Asset
  - Enables planning updates before writing
  - Foundation for future two-pass model with destination structure calculation

- Fixed critical bug in JPEG JUMBF writing (write_jumbf_segments)
  - Corrected overhead calculation: 8 bytes for first segment, 16 for continuations
  - First segment: FF EB (2) + length (2) + JP (2) + En (2) + Z (4) = 12 bytes total
  - Continuation segments add repeated LBox (4) + TBox (4) = 8 more bytes

- Enhanced segment abstraction with SegmentKind enum
  - Better logical classification across formats
  - Improved API for working with segments

- Added debug launch configuration for c2pa example with correct features

- Fixed 3 failing doc tests (borrow checker issues, reserved keyword 'virtual')

All tests passing (56 total: 24 unit, 26 integration, 6 safety)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,10 @@ name = "inspect"
 required-features = ["xmp"]
 
 [[example]]
+name = "virtual_asset"
+required-features = ["xmp"]
+
+[[example]]
 name = "test_mmap"
 required-features = ["memory-mapped"]
 
