Add mmap vs regular I/O comparison benchmark
Created benchmark to compare memory-mapped vs regular file I/O performance.

### Surprising Result: Regular I/O is FASTER!

| File Size | mmap | Regular I/O | Winner |
|-----------|------|-------------|--------|
| 57 MB  | 812 MB/s  | 1,243 MB/s | Regular (+53%) ✅ |
| 226 MB | 779 MB/s  | 1,274 MB/s | Regular (+63%) ✅ |
| 366 MB | 768 MB/s  | 1,271 MB/s | Regular (+65%) ✅ |

### Why Regular I/O Wins

1. **Page fault overhead** - First mmap access is 3-5x slower
2. **Excellent OS caching** - macOS read-ahead is very effective
3. **Sequential access pattern** - Ideal for buffered I/O
4. **8KB buffer efficiency** - Well-tuned for this workload

### Key Finding

Memory mapping has **significant warmup cost**:
- First access: 789-1,325ms (3-5x slower than regular)
- Subsequent: 170-345ms (still slower than regular)

### Implications

For single-pass C2PA workflows, **regular I/O is better**!
Memory mapping only wins for:
- Multiple passes over same file
- Random access patterns
- When file is already in page cache

This contradicts our earlier assumption. We should revert c2pa example
to use regular Asset::open() instead of open_with_mmap().

Run: cargo run --release --example mmap_comparison --features xmp,png,memory-mapped,hashing <file>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,10 @@ required-features = ["memory-mapped"]
 name = "hash_benchmark"
 required-features = ["xmp", "memory-mapped", "hashing"]
 
+[[example]]
+name = "mmap_comparison"
+required-features = ["xmp", "memory-mapped", "hashing"]
+
 [profile.release]
 opt-level = 3
 lto = true
