--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ md5 = { version = "0.7", optional = true }
 quick-xml = { version = "0.38", optional = true, default-features = false }
 memmap2 = { version = "0.9", optional = true }
 fs2 = { version = "0.4", optional = true }
+atree = { version = "0.5", optional = true }
 
 [dev-dependencies]
 c2pa = "0.72"
@@ -28,11 +29,12 @@ sha2 = "0.10"  # For examples only
 default = ["jpeg", "test-utils"]
 jpeg = ["byteorder","md5"]
 png = ["byteorder"]
+bmff = ["byteorder", "atree"]
 exif = []
 xmp = ["quick-xml", "md5"]
 memory-mapped = ["memmap2", "fs2"]
 hashing = []  # Remove sha2 from here
-all-formats = ["jpeg", "png"]
+all-formats = ["jpeg", "png", "bmff"]
 
 # TEMPORARY: C2PA testing feature (delete after validation)
 c2pa-test = []  # Enables C2PA integration tests in examples
