--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ categories = ["multimedia", "parsing"]
 [dependencies]
 # Core I/O
 thiserror = "1.0"
+byteorder = "1.5"
 
 # Optional dependencies - tied to specific features
-byteorder = { version = "1.5", optional = true }
 md5 = { version = "0.7", optional = true }
 quick-xml = { version = "0.38", optional = true, default-features = false }
 memmap2 = { version = "0.9", optional = true }
@@ -27,9 +27,9 @@ sha2 = "0.10"  # For examples only
 
 [features]
 default = ["jpeg", "test-utils"]
-jpeg = ["byteorder","md5"]
-png = ["byteorder"]
-bmff = ["byteorder", "atree"]
+jpeg = ["md5"]
+png = []
+bmff = ["atree"]
 exif = []
 xmp = ["quick-xml", "md5"]
 memory-mapped = ["memmap2", "fs2"]
