Update inspect example to support all formats
- Require all-formats, xmp, exif features
- Simplify EXIF handling (feature always enabled)
- Update doc comment to list supported formats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ required-features = ["xmp"]
 
 [[example]]
 name = "inspect"
-required-features = ["xmp"]
+required-features = ["all-formats", "xmp", "exif"]
 
 [[example]]
 name = "virtual_asset"
