--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ atree = { version = "0.5", optional = true }
 [dev-dependencies]
 c2pa = "0.72"
 sha2 = "0.10"  # For examples only
+serde_bytes = "0.11"  # For BMFF hash example
 
 [features]
 default = ["jpeg"]
