--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ tests/fixtures/huge_test.png
 tests/fixtures/large_test.png
 tests/fixtures/massive_test.png
 tears_of_steel_trailer.mp4
+tearsofsteel_4k.mov
+*.mov
