Update c2pa.rs example to use sign_manifest() for all formats
Now supports both BMFF and non-BMFF formats using Builder::sign_manifest():

**BmffHash Workflow (MP4, MOV, HEIC, AVIF):**
1. Create BmffHash with mandatory exclusions (ftyp, mfra, C2PA UUIDs)
2. Add dummy hash (zeros)
3. Create unsigned placeholder manifest
4. Write + hash in single pass (excluding C2PA UUID boxes)
5. Update BmffHash with computed hash
6. Sign with Builder::sign_manifest()
7. Update manifest in-place

**DataHash Workflow (JPEG, PNG):**
1. Create dummy DataHash with max values (u32::MAX for CBOR safety)
2. Create unsigned placeholder manifest
3. Write + hash in single pass (excluding JUMBF data)
4. Create real DataHash with actual values + pad to match dummy
5. Replace dummy with real DataHash
6. Sign with Builder::sign_manifest()
7. Update manifest in-place

Both workflows tested successfully:
- PNG: ✅ Verified manifest
- MOV (6.7GB): ✅ Verified manifest

Updated Cargo.toml to use local c2pa-rs with sign_manifest() support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,10 @@ fs2 = { version = "0.4", optional = true }
 atree = { version = "0.5", optional = true }
 
 [dev-dependencies]
-c2pa = "0.72"
+c2pa = { path = "../c2pa-rs/sdk" }
 sha2 = "0.10"  # For examples only
 serde_bytes = "0.11"  # For BMFF hash example
+serde_cbor = "0.11"  # For DataHash padding
 
 [features]
 default = ["jpeg"]
