--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ c2pa = { path = "../c2pa-rs/sdk" }
 sha2 = "0.10"  # For examples only
 serde_bytes = "0.11"  # For BMFF hash example
 serde_cbor = "0.11"  # For DataHash padding
+criterion = { version = "0.5", features = ["html_reports"] }
 
 [features]
 default = ["jpeg"]
